// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Board should be generated for 10x10 with no diagonal directions 1`] = `
Object {
  "square": Array [
    Array [
      "e",
      "m",
      "a",
      "r",
      "g",
      "i",
      "n",
      "v",
      "y",
      "n",
    ],
    Array [
      "d",
      "s",
      "d",
      "p",
      "p",
      "o",
      "d",
      "t",
      "e",
      "l",
    ],
    Array [
      "o",
      "y",
      "l",
      "o",
      "m",
      "a",
      "r",
      "k",
      "u",
      "p",
    ],
    Array [
      "c",
      "l",
      "i",
      "t",
      "h",
      "e",
      "o",
      "o",
      "t",
      "s",
    ],
    Array [
      "o",
      "a",
      "u",
      "s",
      "p",
      "t",
      "e",
      "r",
      "o",
      "d",
    ],
    Array [
      "r",
      "e",
      "b",
      "o",
      "e",
      "l",
      "e",
      "i",
      "o",
      "a",
    ],
    Array [
      "c",
      "r",
      "r",
      "e",
      "i",
      "d",
      "b",
      "m",
      "r",
      "e",
    ],
    Array [
      "i",
      "p",
      "v",
      "f",
      "r",
      "w",
      "e",
      "e",
      "k",
      "h",
    ],
    Array [
      "m",
      "a",
      "c",
      "o",
      "e",
      "a",
      "r",
      "r",
      "a",
      "y",
    ],
    Array [
      "s",
      "t",
      "b",
      "v",
      "e",
      "r",
      "s",
      "i",
      "o",
      "n",
    ],
  ],
  "words": Array [
    "method",
    "array",
    "head",
    "file",
    "property",
    "markup",
    "bios",
    "token",
    "week",
    "version",
    "build",
    "margin",
    "save",
    "microcode",
    "stop",
    "real",
    "border",
    "root",
  ],
}
`;

exports[`Board should be generated for 12x12 with any directions 1`] = `
Object {
  "square": Array [
    Array [
      "y",
      "b",
      "a",
      "c",
      "o",
      "u",
      "n",
      "t",
      "t",
      "l",
      "t",
      "y",
    ],
    Array [
      "a",
      "e",
      "a",
      "l",
      "e",
      "r",
      "t",
      "t",
      "c",
      "l",
      "n",
      "e",
    ],
    Array [
      "d",
      "t",
      "e",
      "v",
      "k",
      "r",
      "o",
      "w",
      "u",
      "u",
      "a",
      "k",
    ],
    Array [
      "i",
      "a",
      "t",
      "i",
      "m",
      "e",
      "r",
      "t",
      "d",
      "p",
      "o",
      "p",
    ],
    Array [
      "n",
      "l",
      "l",
      "a",
      "c",
      "o",
      "l",
      "u",
      "o",
      "e",
      "o",
      "e",
    ],
    Array [
      "f",
      "i",
      "l",
      "e",
      "s",
      "l",
      "e",
      "o",
      "r",
      "c",
      "t",
      "e",
    ],
    Array [
      "i",
      "p",
      "a",
      "d",
      "d",
      "i",
      "n",
      "g",
      "p",
      "a",
      "u",
      "s",
    ],
    Array [
      "n",
      "e",
      "t",
      "h",
      "g",
      "i",
      "e",
      "w",
      "d",
      "e",
      "w",
      "t",
    ],
    Array [
      "i",
      "o",
      "e",
      "f",
      "a",
      "h",
      "s",
      "p",
      "l",
      "o",
      "o",
      "p",
    ],
    Array [
      "t",
      "l",
      "o",
      "a",
      "d",
      "h",
      "u",
      "m",
      "g",
      "n",
      "o",
      "l",
    ],
    Array [
      "y",
      "n",
      "e",
      "p",
      "a",
      "d",
      "e",
      "l",
      "i",
      "a",
      "m",
      "o",
    ],
    Array [
      "t",
      "a",
      "n",
      "w",
      "o",
      "d",
      "e",
      "g",
      "a",
      "p",
      "a",
      "h",
    ],
  ],
  "words": Array [
    "padding",
    "else",
    "pagedown",
    "product",
    "update",
    "beta",
    "font",
    "count",
    "net",
    "work",
    "infinity",
    "long",
    "pade",
    "mail",
    "loop",
    "local",
    "timer",
    "cut",
    "weight",
    "pop",
    "key",
    "out",
    "alert",
    "call",
    "pull",
    "file",
    "day",
    "load",
  ],
}
`;

exports[`Board should be generated for 15x15 with any directions 1`] = `
Object {
  "square": Array [
    Array [
      "w",
      "i",
      "t",
      "u",
      "o",
      "t",
      "a",
      "b",
      "u",
      "l",
      "a",
      "t",
      "i",
      "o",
      "n",
    ],
    Array [
      "h",
      "n",
      "u",
      "e",
      "y",
      "o",
      "l",
      "p",
      "e",
      "d",
      "r",
      "e",
      "a",
      "l",
      "n",
    ],
    Array [
      "s",
      "t",
      "n",
      "e",
      "s",
      "a",
      "b",
      "t",
      "m",
      "o",
      "u",
      "s",
      "e",
      "r",
      "i",
    ],
    Array [
      "t",
      "e",
      "l",
      "i",
      "t",
      "r",
      "i",
      "g",
      "g",
      "e",
      "r",
      "n",
      "o",
      "o",
      "g",
    ],
    Array [
      "e",
      "r",
      "a",
      "p",
      "g",
      "l",
      "d",
      "e",
      "m",
      "a",
      "g",
      "s",
      "h",
      "r",
      "r",
    ],
    Array [
      "p",
      "n",
      "t",
      "u",
      "f",
      "i",
      "s",
      "n",
      "t",
      "t",
      "r",
      "u",
      "e",
      "r",
      "a",
    ],
    Array [
      "y",
      "e",
      "a",
      "o",
      "a",
      "i",
      "r",
      "t",
      "a",
      "u",
      "w",
      "o",
      "r",
      "e",
      "m",
    ],
    Array [
      "d",
      "t",
      "f",
      "r",
      "l",
      "w",
      "e",
      "o",
      "c",
      "y",
      "n",
      "s",
      "e",
      "e",
      "k",
    ],
    Array [
      "l",
      "r",
      "p",
      "g",
      "s",
      "l",
      "r",
      "e",
      "b",
      "h",
      "d",
      "c",
      "i",
      "e",
      "s",
    ],
    Array [
      "t",
      "o",
      "i",
      "m",
      "e",
      "t",
      "o",
      "i",
      "l",
      "u",
      "c",
      "o",
      "e",
      "t",
      "y",
    ],
    Array [
      "t",
      "m",
      "w",
      "v",
      "e",
      "e",
      "c",
      "c",
      "t",
      "i",
      "g",
      "l",
      "b",
      "y",
      "n",
    ],
    Array [
      "h",
      "d",
      "d",
      "n",
      "e",
      "i",
      "n",
      "l",
      "a",
      "e",
      "f",
      "o",
      "a",
      "b",
      "t",
    ],
    Array [
      "g",
      "e",
      "x",
      "i",
      "f",
      "r",
      "i",
      "i",
      "a",
      "l",
      "d",
      "r",
      "i",
      "h",
      "a",
    ],
    Array [
      "i",
      "e",
      "l",
      "t",
      "n",
      "i",
      "o",
      "p",
      "l",
      "s",
      "w",
      "o",
      "r",
      "k",
      "x",
    ],
    Array [
      "r",
      "s",
      "t",
      "p",
      "h",
      "e",
      "i",
      "g",
      "h",
      "t",
      "s",
      "a",
      "c",
      "d",
      "u",
    ],
  ],
  "words": Array [
    "code",
    "group",
    "tabulation",
    "help",
    "trigger",
    "origin",
    "cursor",
    "color",
    "local",
    "driver",
    "seed",
    "syntax",
    "class",
    "error",
    "false",
    "line",
    "margin",
    "mouse",
    "internet",
    "row",
    "seek",
    "point",
    "height",
    "body",
    "deploy",
    "step",
    "base",
    "net",
    "byte",
    "file",
    "fatal",
    "fix",
    "low",
    "real",
    "game",
    "work",
    "write",
    "right",
    "true",
    "empty",
    "out",
    "bug",
  ],
}
`;

exports[`Board should be generated for 20x15 with only horizontal directions 1`] = `
Object {
  "square": Array [
    Array [
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
      "d",
      "n",
      "f",
      "l",
    ],
    Array [
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "a",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
      "d",
      "n",
      "f",
    ],
    Array [
      "l",
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "t",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
      "d",
      "n",
    ],
    Array [
      "f",
      "l",
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "e",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
      "d",
    ],
    Array [
      "n",
      "f",
      "l",
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "b",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
    ],
    Array [
      "d",
      "n",
      "f",
      "l",
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
    ],
    Array [
      "d",
      "n",
      "f",
      "l",
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
    ],
    Array [
      "d",
      "n",
      "f",
      "l",
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
    ],
    Array [
      "d",
      "n",
      "f",
      "l",
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
    ],
    Array [
      "d",
      "n",
      "f",
      "l",
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
    ],
    Array [
      "d",
      "n",
      "f",
      "l",
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
    ],
    Array [
      "d",
      "n",
      "f",
      "l",
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
    ],
    Array [
      "d",
      "n",
      "f",
      "l",
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
    ],
    Array [
      "d",
      "n",
      "f",
      "l",
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
    ],
    Array [
      "d",
      "n",
      "f",
      "l",
      "s",
      "e",
      "e",
      "t",
      "o",
      "d",
      "a",
      "s",
      "t",
      "a",
      "n",
      "b",
      "y",
      "m",
      "d",
      "o",
    ],
  ],
  "words": Array [
    "beta",
  ],
}
`;
